--- a/research/4_model_trainer.ipynb
+++ b/research/4_model_trainer.ipynb
@@ -171,20 +171,19 @@
     "        #loading data \n",
     "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
     "\n",
-    "        trainer_args = TrainingArguments(\n",
-    "            output_dir=self.config.root_dir, num_train_epochs=self.config.num_train_epochs, warmup_steps=self.config.warmup_steps,\n",
-    "            per_device_train_batch_size=self.config.per_device_train_batch_size, per_device_eval_batch_size=self.config.per_device_train_batch_size,\n",
-    "            weight_decay=self.config.weight_decay, logging_steps=self.config.logging_steps,\n",
-    "            eval_strategy=self.config.eval_strategy, eval_steps=self.config.eval_steps, save_steps=self.config.save_steps,\n",
-    "            gradient_accumulation_steps=self.config.gradient_accumulation_steps\n",
-    "        ) \n",
-    "\n",
-    "        ##trainer_args = TrainingArguments(\n",
-    "        #    output_dir=self.config.root_dir, num_train_epochs=1, warmup_steps=500,\n",
-    "        #    weight_decay=0.01, logging_steps=10,\n",
-    "         #   eval_strategy='steps', eval_steps=500, save_steps=1e6,\n",
-    "         #   gradient_accumulation_steps=16\n",
+    "        #trainer_args = TrainingArguments(\n",
+    "        #    per_device_train_batch_size=self.config.per_device_train_batch_size, per_device_eval_batch_size=self.config.per_device_train_batch_size,\n",
+    "        #    weight_decay=self.config.weight_decay, logging_steps=self.config.logging_steps,\n",
+    "        #    eval_strategy=self.config.eval_strategy, eval_steps=self.config.eval_steps, save_steps=self.config.save_steps,\n",
+    "        #    gradient_accumulation_steps=self.config.gradient_accumulation_steps\n",
     "        #) \n",
+    "\n",
+    "        trainer_args = TrainingArguments(\n",
+    "           output_dir=self.config.root_dir, num_train_epochs=5, warmup_steps=300,\n",
+    "           weight_decay=0.01, logging_steps=50,\n",
+    "           eval_strategy='steps', eval_steps=300, save_steps=1000,\n",
+    "           gradient_accumulation_steps=16\n",
+    "        ) \n",
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
     "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
@@ -262,6 +261,36 @@
       "KeyboardInterrupt\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error while downloading from https://cdn-lfs.hf.co/google/pegasus-cnn_dailymail/89463bc493ce252a2919b01ad3d00bae933f079d0cf279cf96c33312dc63a249?response-content-disposition=inline%3B+filename*%3DUTF-8%27%27model.safetensors%3B+filename%3D%22model.safetensors%22%3B&Expires=1736664166&Policy=eyJTdGF0ZW1lbnQiOlt7IkNvbmRpdGlvbiI6eyJEYXRlTGVzc1RoYW4iOnsiQVdTOkVwb2NoVGltZSI6MTczNjY2NDE2Nn19LCJSZXNvdXJjZSI6Imh0dHBzOi8vY2RuLWxmcy5oZi5jby9nb29nbGUvcGVnYXN1cy1jbm5fZGFpbHltYWlsLzg5NDYzYmM0OTNjZTI1MmEyOTE5YjAxYWQzZDAwYmFlOTMzZjA3OWQwY2YyNzljZjk2YzMzMzEyZGM2M2EyNDk%7EcmVzcG9uc2UtY29udGVudC1kaXNwb3NpdGlvbj0qIn1dfQ__&Signature=Bsg-AkyinNTVoGouO1irpIwfM3FdNh%7EEYBNK%7EWh2KNpRH4hOimQEgsz-73mVQnKtjuODoA2qe3nQTbXk4dsR-W2HqeOR9HE-HafEAxe4-rcxrGi6tinynG%7EONkouT9eR7gGoLmTbJNQ2k3IC0jBlEtmJm3TXwP2mU9mJ1VCxx7vKunFgaCscQ9XvLyDUUFuI1B86i8TfmrKMNfiBQUthQTa7d5zaHOb5mGZnIb9ZJVomcN3inEJBwN2QuW5%7E0YWLtNKqZQJi2aiCkmFVTThgpJMgOrvjXcGnCtVMnoOyQS3AXUdXxMk5igMgKXRKM%7E%7EzinvshVsLPHKPMeGdvlklNg__&Key-Pair-Id=K3RPWS32NSSJCE: HTTPSConnectionPool(host='cdn-lfs.hf.co', port=443): Read timed out.\n",
+      "Trying to resume download...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-01-09 12:14:36,622: WARNING: file_download: Error while downloading from https://cdn-lfs.hf.co/google/pegasus-cnn_dailymail/89463bc493ce252a2919b01ad3d00bae933f079d0cf279cf96c33312dc63a249?response-content-disposition=inline%3B+filename*%3DUTF-8%27%27model.safetensors%3B+filename%3D%22model.safetensors%22%3B&Expires=1736664166&Policy=eyJTdGF0ZW1lbnQiOlt7IkNvbmRpdGlvbiI6eyJEYXRlTGVzc1RoYW4iOnsiQVdTOkVwb2NoVGltZSI6MTczNjY2NDE2Nn19LCJSZXNvdXJjZSI6Imh0dHBzOi8vY2RuLWxmcy5oZi5jby9nb29nbGUvcGVnYXN1cy1jbm5fZGFpbHltYWlsLzg5NDYzYmM0OTNjZTI1MmEyOTE5YjAxYWQzZDAwYmFlOTMzZjA3OWQwY2YyNzljZjk2YzMzMzEyZGM2M2EyNDk%7EcmVzcG9uc2UtY29udGVudC1kaXNwb3NpdGlvbj0qIn1dfQ__&Signature=Bsg-AkyinNTVoGouO1irpIwfM3FdNh%7EEYBNK%7EWh2KNpRH4hOimQEgsz-73mVQnKtjuODoA2qe3nQTbXk4dsR-W2HqeOR9HE-HafEAxe4-rcxrGi6tinynG%7EONkouT9eR7gGoLmTbJNQ2k3IC0jBlEtmJm3TXwP2mU9mJ1VCxx7vKunFgaCscQ9XvLyDUUFuI1B86i8TfmrKMNfiBQUthQTa7d5zaHOb5mGZnIb9ZJVomcN3inEJBwN2QuW5%7E0YWLtNKqZQJi2aiCkmFVTThgpJMgOrvjXcGnCtVMnoOyQS3AXUdXxMk5igMgKXRKM%7E%7EzinvshVsLPHKPMeGdvlklNg__&Key-Pair-Id=K3RPWS32NSSJCE: HTTPSConnectionPool(host='cdn-lfs.hf.co', port=443): Read timed out.\n",
+      "Trying to resume download...]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "16a64d15ce254066be8409aefd8432fe",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   2%|2         | 52.4M/2.28G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
