--- a/research/5_model_evaluation.ipynb
+++ b/research/5_model_evaluation.ipynb
@@ -134,9 +134,7 @@
     "import evaluate\n",
     "import torch\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from sklearn.metrics import f1_score\n",
-    "import numpy as np\n"
+    "from tqdm import tqdm\n"
    ]
   },
   {
