--- a/research/4_model_trainer.ipynb
+++ b/research/4_model_trainer.ipynb
@@ -185,7 +185,7 @@
     "           output_dir=self.config.root_dir, num_train_epochs=5, warmup_steps=300,\n",
     "           weight_decay=0.01, logging_steps=50,\n",
     "           eval_strategy='steps', eval_steps=300, save_steps=1000,\n",
-    "           gradient_accumulation_steps=16\n",
+    "            gradient_accumulation_steps=4,per_device_train_batch_size=4, fp16=True\n",
     "        ) \n",
     "\n",
     "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
