--- a/research/5_model_evaluation.ipynb
+++ b/research/5_model_evaluation.ipynb
@@ -157,7 +157,7 @@
     "\n",
     "    \n",
     "    def calculate_metric_on_test_ds(self,dataset, metric, model, tokenizer, \n",
-    "                               batch_size=16, device=\"cuda\" if torch.cuda.is_available() else \"cpu\", \n",
+    "                               batch_size=4, device=\"cuda\" if torch.cuda.is_available() else \"cpu\", \n",
     "                               column_text=\"article\", \n",
     "                               column_summary=\"highlights\"):\n",
     "        article_batches = list(self.generate_batch_sized_chunks(dataset[column_text], batch_size))\n",
@@ -169,7 +169,8 @@
     "            inputs = tokenizer(article_batch, max_length=1024,  truncation=True, \n",
     "                            padding=\"max_length\", return_tensors=\"pt\")\n",
     "            \n",
-    "            summaries = model.generate(input_ids=inputs[\"input_ids\"].to(device),\n",
+    "            with torch.amp.autocast():\n",
+    "                summaries = model.generate(input_ids=inputs[\"input_ids\"].to(device),\n",
     "                            attention_mask=inputs[\"attention_mask\"].to(device), \n",
     "                            length_penalty=0.8, num_beams=8, max_length=128)\n",
     "            ''' parameter for length penalty ensures that the model does not generate sequences that are too long. '''\n",
