--- a/research/5_model_evaluation.ipynb
+++ b/research/5_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer\\\\research'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'c:\\\\Users\\\\vvkar\\\\OneDrive\\\\Desktop\\\\major project\\\\Abstractive-Text-Summarizer'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,9 +125,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-01-11 17:42:09,004: INFO: config: PyTorch version 2.4.1 available.]\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
     "from datasets import load_dataset, load_from_disk\n",
@@ -139,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +164,7 @@
     "            yield list_of_elements[i : i + batch_size]\n",
     "\n",
     "    \n",
-    "    def calculate_metric_on_test_ds(self,dataset, metric, model, tokenizer, \n",
+    "    def calculate_metric_on_test_ds(self,dataset, rouge_metric, bleu_metric ,model, tokenizer, \n",
     "                               batch_size=4, device=\"cuda\" if torch.cuda.is_available() else \"cpu\", \n",
     "                               column_text=\"article\", \n",
     "                               column_summary=\"highlights\"):\n",
@@ -184,10 +192,15 @@
     "            decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
     "            \n",
     "            \n",
-    "            metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
-    "            \n",
+    "            rouge_metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
+    "             \n",
+    "            tokenized_references = [[ref.split()] for ref in target_batch]  # BLEU expects list of lists\n",
+    "            tokenized_predictions = [pred.split() for pred in decoded_summaries]\n",
+    "            bleu_metric.add_batch(predictions=tokenized_predictions, references=tokenized_references)\n",
+    "\n",
     "        #  Finally compute and return the ROUGE scores.\n",
-    "        score = metric.compute()\n",
+    "        score = rouge_metric.compute()\n",
+    "        bleu_score = bleu_metric.compute()\n",
     "        return score\n",
     "\n",
     "\n",
@@ -202,51 +215,57 @@
     "        rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
     "  \n",
     "        rouge_metric = evaluate.load('rouge')\n",
+    "        bleu_metric = evaluate.load('bleu')\n",
     "\n",
-    "        score = self.calculate_metric_on_test_ds(\n",
-    "        dataset_samsum_pt['test'][0:10], rouge_metric, model_pegasus, tokenizer, batch_size = 2, column_text = 'dialogue', column_summary= 'summary'\n",
+    "        rouge_score,bleu_score = self.calculate_metric_on_test_ds(\n",
+    "        dataset_samsum_pt['test'][0:10], rouge_metric ,bleu_metric, model_pegasus, tokenizer, batch_size = 2, column_text = 'dialogue', column_summary= 'summary'\n",
     "            )\n",
     "        \n",
     "    \n",
     "    \n",
-    "        rouge_dict = {rn: score[rn] for rn in rouge_names }\n",
+    "        rouge_dict = {rn: rouge_score[rn] for rn in rouge_names }\n",
     "        df = pd.DataFrame(rouge_dict, index = ['pegasus'] )\n",
-    "        df.to_csv(self.config.metric_file_name, index=False)\n"
+    "        df.to_csv(self.config.metric_file_name, index=False)\n",
+    "        print(\"RougeScores:\")\n",
+    "        print(df)\n",
+    "        print(\"\\nBleu Score:\")\n",
+    "        print(\"{bleu_score['bleu']:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-08 17:40:15,688: INFO: common: yaml file: config\\config.yaml loaded successfully]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-01-08 17:40:15,704: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-01-08 17:40:15,709: INFO: common: created directory at: artifacts]\n",
-      "[2025-01-08 17:40:15,711: INFO: common: created directory at: artifacts/model_evaluation]\n"
+      "[2025-01-11 17:42:18,275: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-01-11 17:42:18,281: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-01-11 17:42:18,283: INFO: common: created directory at: artifacts]\n",
+      "[2025-01-11 17:42:18,286: INFO: common: created directory at: artifacts/model_evaluation]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [05:31<00:00, 66.34s/it]\n"
+      "100%|██████████| 5/5 [02:42<00:00, 32.58s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-01-08 17:45:54,034: INFO: rouge_scorer: Using default tokenizer.]\n"
+      "[2025-01-11 17:45:09,072: INFO: rouge_scorer: Using default tokenizer.]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
